--- a/components/Header.module.css
+++ b/components/Header.module.css
@@ -16,7 +16,7 @@
     display: inline;
     margin-right: 20px;
     margin: 0px 5rem;
-    font-size: 30px;
+    font-size: 45px;
   }
   
   .navLink {
@@ -26,5 +26,7 @@
   }
   
   .navLink:hover {
-    color: #ccc;
+    color:indigo;
+    border: solid 2px;
+    font-size: 50px;
   }
