--- a/components/Todos.module.css
+++ b/components/Todos.module.css
@@ -4,17 +4,21 @@
   border-radius: 5px;
   padding: 20px;
   margin-bottom: 10px;
+  margin-top: 50px;
   text-align: center;
+  width: fit-content;
+  margin-left: 30em;
+  list-style: none;
 }
 
 .todoTitle {
-  font-size: 20px;
+  font-size: 25px;
   font-weight: bold;
 }
 
 .todoDescription {
   margin-top: 10px;
-  font-size: 16px;
+  font-size: 20px;
 }
 
 .completeCheckbox {
@@ -23,7 +27,12 @@
 
 .deleteBtn {
   top: 50%;
-  margin-left: 20px;
+  padding: 10px;
+  background-color: blueviolet;
+  color: white;
+  margin-left: 500px;
+  font-size: 20px;
+  cursor: pointer;
   transform: translateY(-50%);
   visibility: hidden; /* Hide delete icon by default */
 }
